# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1438 2010-09-28 08:41:13 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --
3.0.0 beta5 2010-??-??
 - 2010-09-28 Fixed bug#4732 - Mysql table index not used when LOWER()
    is used in queries for customer_user.login. There is now a new flag CaseSensitive
    in the customer DB settings. Setting this to 1 will improve performance
    dramatically on large databases.
 - 2010-09-24 Fixed bug#6007 - Free field content not saved.

3.0.0 beta4 2010-09-27
 - 2010-09-24 Fixed bug#6007 - Free field content not saved.
 - 2010-09-24 Updated Russian translation file, thanks to Eugene Kungurov!
 - 2010-09-24 Fixed bug#5655 - In Article Zoom, after a new article got created
    and page reloads, new article is shown as new. It's confusing.
 - 2010-09-24 Fixed bug#5848 - Wrong characters in Czech language.
 - 2010-09-24 Updated Czech translation file, thanks to Pavel!
 - 2010-09-24 Fixed bug#5962 - ToolBarModule and TicketSearchProfile, management
    of search profiles is not working correctly.
 - 2010-09-23 Fixed bug#5950 - Customer History not shown in Change Customer View.
 - 2010-09-23 Changed ResponseFormat to TOFU (what people expect).
 - 2010-09-23 Fixed bug#3515 - AgentTicketMove standard "Note" and "Subject" cannot be configured.
 - 2010-09-23 Fixed bug#5965 - AgentTicketMove does not support setting of "Note" and "Subject".
 - 2010-09-23 Fixed bug#5999 - Undefined variables generate warning in CustomerTicketMessage.
 - 2010-09-23 Fixed bug#5980 - Free fields are not properly aligned.
 - 2010-09-23 Fixed bug#5983 - Outlook inline image is displayed in attachment list.
 - 2010-09-23 Fixed bug#5849 - Headline / Company Name is hardcoded in the DTL of the customer interface.